# resolve

./: .gitignore  Makefile
.github/workflows/: ci.yml
clang-plugin/: CMakeLists.txt
clang-plugin/src/: Checker.cpp  helper.cpp  llvm_headers.hpp  queryBadMalloc.cpp  queryBadMalloc.hpp  queryFPE.cpp  queryFPE.hpp  queryNullPointerDeref.cpp  queryNullPointerDeref.hpp  useAfterFree.cpp  useAfterFree.hpp
examples/: openssl.sh
libresolve/: Cargo.toml  README.md
libresolve/src/: buffer_writer.rs  lib.rs  shadowobjs.rs
linker/: AnalysisEngine_linkmap.py  extract_facts.py  link-facts.sh  linker_embedder.sh
llvm-plugin/: Makefile
llvm-plugin/src/: AnnotateFunctions.cpp  CMakeLists.txt  DlsymHook.cpp  Facts.hpp  LLVMFacts.hpp  NodeID.hpp  ObjHook.cpp
llvm-plugin/src/CVEAssert/: CVEAssert.cpp  Vulnerability.hpp  Worklist.hpp  arith_san.cpp  arith_san.hpp  bounds_check.cpp  helpers.cpp  helpers.hpp  null_ptr.cpp
llvm-plugin/tests/regression/: div_zero.c  lit.cfg.py  oob_no_remed.c  overflow_add_no_remed.c
llvm-plugin/tests/regression/vulnerabilities/: stack_oob.json
reach/: Dockerfile  Makefile  README.md
reach/lib/: graph.cpp
reach/src/: config.hpp  main.cpp
reach/tests/: aria2_query.json  cfs_query.json  dlsym_log.json  guestbook_query.json  input.json  reach.expected
scripts/: install-deps.sh
